Fixed some responsive layout issues

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -22,8 +22,8 @@ header {
 }
 
 .banner {
-  width: 100%;
-  height: 60px;
+  min-width: 640px;
+  height: 70px;
 }
 
 .tagline {
@@ -39,7 +39,7 @@ header {
 
 .inner {
   position: relative;
-  width: 940px;
+  width: 80%;
   margin: 0 auto;
 }
 
